# tiny-compiler

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  ROADMAP.md:Zone.Identifier  hello
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom_template.md  feature_request.md
.github/workflows/: release.yml
docs/: grammar-railroad.md  language-spec.md  llvm-patterns.md
examples/: closure.tiny  examples.tiny  examples.tiny:Zone.Identifier  fibonacci.tiny  fizzbuzz.tiny  hello.tiny
grammar/: Tiny.g4
include/tiny/: AST.h  ASTBuilder.h  ASTPrinter.h  CodeGen.h  Diagnostics.h  ErrorListener.h  ModuleLoader.h  SemanticAnalyzer.h  SymbolTable.h  TypeSystem.h
runtime/: CMakeLists.txt  runtime.cpp  runtime.h
src/: AST.cpp  ASTBuilder.cpp  ASTPrinter.cpp  CodeGen.cpp  Diagnostics.cpp  ModuleLoader.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  TypeSystem.cpp  main.cpp
tests/: CMakeLists.txt
tests/programs/: run_tests.py
tests/programs/arrays/: dot_product.tiny  indexing.expected  indexing.tiny
tests/programs/basics/: arithmetic.tiny  booleans.tiny  floats.expected  floats.tiny  strings.tiny  variables.tiny
tests/programs/closures/: capture.tiny  higher_order.expected  higher_order.tiny  simple_lambda.tiny
tests/programs/control_flow/: float_compare.tiny  for_range.tiny  if_else.tiny  shadowing.tiny  while_loop.tiny
tests/programs/errors/: arity_mismatch.expected  arity_mismatch.tiny  bare_return_nonvoid.expected  bare_return_nonvoid.tiny  call_non_function.expected  call_non_function.tiny  duplicate_function.expected  duplicate_function.tiny  duplicate_param.expected  duplicate_param.tiny  duplicate_var.expected  duplicate_var.tiny  immutable_assign.expected  immutable_assign.tiny  multi_immutable.expected  multi_immutable.tiny  multi_undefined.expected  multi_undefined.tiny  non_bool_condition.expected  non_bool_condition.tiny  return_outside_function.expected  return_type_mismatch.expected  return_type_mismatch.tiny  type_mismatch.expected  undefined_function.expected  undefined_function.tiny  undefined_var.expected
tests/programs/functions/: factorial.tiny  fibonacci.tiny  multi_return.expected  multi_return.tiny  recursion.tiny  void_function.tiny
tests/programs/modules/basic_import/: main.tiny  math.tiny
tests/programs/modules/chain_import/: base.tiny  main.expected  main.tiny  middle.tiny
tests/programs/modules/dedup_import/: main.tiny  math.tiny  wrapper.tiny
tests/programs/modules/errors/circular/: a.tiny  b.tiny  main.expected  main.tiny
tests/programs/modules/errors/not_found/: main.expected  main.tiny
tests/programs/modules/multi_import/: main.expected  main.tiny  math.tiny  utils.tiny
tests/unit/: test_ast.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
tools/: tiny-highlight.vim
